--- a/languages/c++.org
+++ b/languages/c++.org
@@ -1,2 +1,5 @@
 - Andreas Kling
   https://www.youtube.com/watch?v=gt6-TC6FtMs&feature=youtu.be
+- C++ FULL COURSE For Beginners (Learn C++ in 10 hours)
+  15:00
+  https://www.youtube.com/watch?v=GQp1zzTwrIg&t=28139s
